Update and rename .env.example to .env

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=DATABASE_URL
+DATABASE_URL=mongodb+srv://admin:<password>@database-ho9ku.azure.mongodb.net/test?retryWrites=true&w=majority
 
 EXPRESS_SESSION_KEY=EXPRESS_SESSION_KEY
 JWT_SECRET=JWT_SECRET
